# easy-enclave

./: .gitignore  HANDOFF.md  README.md  install-agent.sh  pyproject.toml
.github/workflows/: README.md  ci.yml  deploy-agent.yml  deploy-contacts.yml  deploy-control-plane.yml  deploy.yml  pages.yml  pipeline-dev.yml  pipeline-release.yml  release-agent-dev.yml  release-agent.yml  reset-agent.yml  test-deploy.yml
action/: README.md  action.yml  cloudflare_dns.py
action/install-contacts-agent/: action.yml
action/install-control-agent/: action.yml
action/src/: agent.py  (+6 more)
agent/: README.md  agent.py  install.sh  ratls.py  tunnel_client.py  verify.py  vm.py  webadmin.html
control_plane/: .env.example  Caddyfile  README.md  allowlist.py  config.py  docker-compose.yml  install.sh  ledger.py  policy.py  ratls.py  registry.py  requirements.runtime.txt  requirements.txt  server.py  tunnel_proxy.py
docs/: CNAME  _config.yml  action.html  action.md  concepts.html  concepts.md  control-plane.md  examples.md  index.html  index.md  quickstart.html  quickstart.md  sdk.html  sdk.md  whitepaper.md  workflows.md
example/: .env  README.md  contact-compose.yml  contact.Dockerfile  contact_admin.html  contact_server.py  docker-compose.yml  verify.py
host/: README.md  install.sh  vm.py
installer/: README.md  agent-attestation-allowlist.json  host.py  install.sh  reset_agents.sh  uninstall_agent.sh
sdk/: README.md  pyproject.toml
sdk/easyenclave/: __init__.py  connect.py  exceptions.py  github.py  ratls.py  verify.py
sdk/tests/: __init__.py  test_github.py  test_verify.py
(+34 files in other folders)
