[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "easyenclave"
version = "0.1.0"
description = "Python SDK for Easy Enclave - TDX attestation via GitHub"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Easy Enclave Contributors" }
]
keywords = ["tdx", "attestation", "enclave", "confidential-computing", "github"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.28.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/posix4e/easy-enclave"
Repository = "https://github.com/posix4e/easy-enclave"
Issues = "https://github.com/posix4e/easy-enclave/issues"
